<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/buy_pro_advantages_title"
            android:gravity="center"
            android:id="@+id/textView23" android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_marginLeft="@dimen/dialog_text_margin"
            android:layout_marginTop="@dimen/dialog_text_margin"
            android:layout_marginRight="@dimen/dialog_text_margin" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_text_margin"
            android:layout_marginRight="@dimen/dialog_text_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_menu_remove_ads_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView22"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="16dp"
                    android:text="@string/buy_pro_advantages_text1"
                    android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_text_margin"
            android:layout_marginRight="@dimen/dialog_text_margin"
            android:layout_marginBottom="@dimen/dialog_text_margin"
            android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView8"
                    android:src="@drawable/ic_event_gray"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView29"
                    android:textColor="@android:color/black"
                    android:text="@string/buy_pro_advantages_text2"
                    android:layout_marginLeft="16dp" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/buy_pro_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_color_button">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_play_white_24dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="Buy $1.99"/>

    </LinearLayout>


</LinearLayout>